增加文件删除

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,10 @@
     <string name="app_name">ASamba</string>
 
     <string-array name="dialog_item" >
+        <item>打开</item>
         <item>下载</item>
         <item>上传</item>
         <item>删除</item>
+
     </string-array>
 </resources>
